--- a/styles/cryptocurrency-history-stylesheet.css
+++ b/styles/cryptocurrency-history-stylesheet.css
@@ -69,3 +69,13 @@
     background-color: #fff;
     z-index: 999;
 }
+
+/* Heading Styles */
+h1 {
+    letter-spacing: 3px;
+    font-family: "Rhodium Libre", sans-serif;
+    text-align: center;
+    border-radius: 8px;
+    text-shadow: 2px 2px 2px coral;
+    color: white;
+}
