--- a/styles/cryptocurrency-history-stylesheet.css
+++ b/styles/cryptocurrency-history-stylesheet.css
@@ -254,3 +254,29 @@ ul li {
     text-align: center;
     width: 320px;
 }
+
+/* Circle Section */
+.circle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: white;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    transition: transform 0.3s;
+}
+
+.circle:hover {
+    transform: scale(1.2);
+}
+
+.circle .icon {
+    font-size: 40px;
+    line-height: 60px;
+    color: blue;
+    box-shadow: 5px 10px 90px white;
+}
