--- a/styles/cryptocurrency-history-stylesheet.css
+++ b/styles/cryptocurrency-history-stylesheet.css
@@ -369,6 +369,21 @@ form input[type="submit"] {
     color: black;
 }
 
+/* Footer Section */
+.footer {
+    background: linear-gradient(to right, black, grey);
+    margin: 90px 0 0 1;
+    padding-top: 30px;
+    color: white;
+    text-align: center;
+    font-family: "Rhodium Libre", sans-serif;
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+}
+
 #contact-information {
     background-color: rgba(0, 0, 0, 0);
     height: 160px;
