--- a/styles/cryptocurrency-history-stylesheet.css
+++ b/styles/cryptocurrency-history-stylesheet.css
@@ -546,3 +546,79 @@ body {
         margin-top: 20px;
     }
 }
+
+/* For screens between 768px and 1023px (Tablet) */
+@media (min-width: 768px) and (max-width: 1023px) {
+    #header h1 {
+        margin-right: 100px;
+    }
+
+    #header ul li {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+
+    #hero-image img {
+        height: 400px;
+    }
+
+    #ai-info {
+        bottom: 200px;
+        right: 75px;
+    }
+
+    .change h1 {
+        margin-left: 100px;
+    }
+
+    #custom-contact {
+        left: 75px;
+        right: 75px;
+        width: auto;
+        margin-right: 0;
+    }
+
+    .timeline {
+        margin: 120px auto;
+        transform: scale(1.2);
+    }
+
+    #header.grid_12 {
+        font-size: 18px;
+        padding-top: 15px;
+    }
+
+    #nav {
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    #nav li {
+        margin-bottom: 0;
+        margin-right: 15px;
+    }
+
+    #aichatbot {
+        margin-top: 60px;
+        text-align: center;
+    }
+
+    #aichatbot h1#pahsa.i-section {
+        margin-bottom: 20px;
+    }
+
+    #aichatbot .circle {
+        margin-bottom: 40px;
+    }
+
+    #aichatbot .change h1 {
+        margin-left: 100px;
+    }
+
+    #aichatbot #chatbox {
+        margin-top: 40px;
+    }
+}
