--- a/styles/cryptocurrency-history-stylesheet.css
+++ b/styles/cryptocurrency-history-stylesheet.css
@@ -622,3 +622,65 @@ body {
         margin-top: 40px;
     }
 }
+
+/* For screens larger than 1023px (Desktop) */
+@media (min-width: 1024px) {
+    #header h1 {
+        margin-right: 250px;
+    }
+
+    #header ul li {
+        margin-right: 20px;
+    }
+
+    #hero-image img {
+        height: 590px;
+    }
+
+    #ai-info {
+        bottom: 300px;
+        right: 100px;
+    }
+
+    .change h1 {
+        margin-left: 290px;
+    }
+
+    #custom-contact {
+        left: 900px;
+        width: 250px;
+        margin-right: 400px;
+    }
+
+    .timeline {
+        margin: 220px auto;
+        transform: scale(1.2);
+    }
+
+    #header.grid_12 {
+        font-size: 18px;
+        padding-top: 20px;
+    }
+
+    #aichatbot {
+        margin-top: 10px;
+        text-align: center;
+    }
+
+    #aichatbot h1#pahsa.i-section {
+        margin-bottom: 30px;
+    }
+
+    #aichatbot .circle {
+        margin-bottom: 60px;
+    }
+
+    #aichatbot .change h1 {
+        margin-left: 370px;
+        margin-top: 30px;
+    }
+
+    #aichatbot #chatbox {
+        margin-top: 10px;
+    }
+}
