Fixed header h1 values for validation

--- a/styles/cryptocurrency-history-stylesheet.css
+++ b/styles/cryptocurrency-history-stylesheet.css
@@ -22,7 +22,7 @@
     margin-right: 250px;
     font-family: "Rhodium Libre", sans-serif;
     color: white;
-    text-shadow: 15%;
+    text-shadow: 2px 2px 2px coral;
 }
 
 #header ul {
