--- a/styles/cryptocurrency-history-stylesheet.css
+++ b/styles/cryptocurrency-history-stylesheet.css
@@ -35,7 +35,7 @@
 #header ul li a {
     color: white;
     font-family: "Rhodium Libre", sans-serif;
-    padding: 5px auto;
+    padding: 5px;
     margin: 10px;
     transition: color 0.3s ease;
 }
