Removed auto from a padding to pass validation

--- a/styles/cryptocurrency-history-stylesheet.css
+++ b/styles/cryptocurrency-history-stylesheet.css
@@ -92,7 +92,7 @@ p {
 a {
     color: white;
     font-family: "Rhodium Libre", sans-serif;
-    padding: 0 auto;
+    padding: 0;
     margin: 5px;
 }
 
