Converted contact image background from jpg to webp and replaced link in css

--- a/styles/cryptocurrency-history-stylesheet.css
+++ b/styles/cryptocurrency-history-stylesheet.css
@@ -330,7 +330,7 @@ ul li {
 }
 
 .contact {
-    background-image: url("ivana-cajina-asuyh-_ZX54-unsplash.jpg");
+    background-image: url("ivana-cajina-asuyh-_ZX54-unsplash.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
