--- a/styles/cryptocurrency-history-stylesheet.css
+++ b/styles/cryptocurrency-history-stylesheet.css
@@ -168,6 +168,14 @@ li {
     font-family: "Rhodium Libre", sans-serif;
 }
 
+.blockchain2 {
+    padding: 20px;
+    height: 350px;
+    border-radius: 5px;
+    text-align: center;
+    font-family: "Rhodium Libre", sans-serif;
+}
+
 section.blockchain>div {
     color: white;
     font-size: 18px;
@@ -177,6 +185,11 @@ section.blockchain>div {
 }
 
 .blockchain ul {
+    list-style-type: none;
+    padding-left: 0px;
+}
+
+.blockchain2 ul {
     list-style-type: none;
     padding-left: 0px;
 }
@@ -204,6 +217,12 @@ ul li {
 
 /* Blockchain List Styles */
 .blockchain ul li {
+    display: inline-block;
+    text-align: center;
+    width: 320px;
+}
+
+.blockchain2 ul li {
     display: inline-block;
     text-align: center;
     width: 320px;
@@ -417,10 +436,11 @@ body {
     margin: 0 auto;
 }
 
-/* For screens smaller than 768px (Mobile) */
-@media (max-width: 767px) {
+/* For screens smaller than 425px (Mobile) */
+@media (max-width: 425px) {
     #header h1 {
         margin-right: 20px;
+        font-size: 14px;
     }
 
     #header ul li {
@@ -432,17 +452,17 @@ body {
     }
 
     #ai-info {
-        bottom: 150px;
-        right: 50px;
+        bottom: 300px;
+        right: 20px;
+        width: 200px;
+        font-size: 7px;
+        float: left;
     }
+
 
     #ai-info p {
         bottom: 200px;
         right: 75px;
-    }
-
-    .change h1 {
-        margin-left: 50px;
     }
 
     #custom-contact {
@@ -452,8 +472,31 @@ body {
         margin-right: 0;
     }
 
-    .blockchain {
-        height: 250px;
+    .blockchain2 {
+        padding-top: 150px;
+        margin-bottom: 100px;
+    }
+
+    .blockchain ul li {
+        height: 50px;
+        width: 160px;
+    }
+
+    .blockchain2 ul li {
+        height: 50px;
+        width: 170px;
+    }
+
+    .contact-text {
+        font-size: 10px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    p {
+        font-size: 8px;
     }
 
     .timeline {
@@ -462,7 +505,7 @@ body {
     }
 
     #header.grid_12 {
-        font-size: 16px;
+        font-size: 7px;
         padding-top: 10px;
     }
 
@@ -485,21 +528,6 @@ body {
         text-align: center;
     }
 
-    #aichatbot h1#pahsa.i-section {
-        margin-bottom: 10px;
-    }
-
-    #aichatbot .circle {
-        margin-bottom: 20px;
-    }
-
-    #aichatbot .change h1 {
-        margin-left: 20px;
-    }
-
-    #aichatbot #chatbox {
-        margin-top: 20px;
-    }
 }
 
 /* For screens between 768px and 1023px (Tablet) */
