--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -127,7 +127,6 @@ li {
 
 /* AI Info Section */
 #ai-info {
-    position: absolute;
     bottom: 300px;
     right: 100px;
     box-shadow: 5px 5px 20px grey;
@@ -251,7 +250,6 @@ ul li {
     font-size: 40px;
     line-height: 60px;
     color: slategray;
-    box-shadow: 5px 10px 90px white;
 }
 
 /* Timeline Section */
@@ -436,8 +434,8 @@ body {
     margin: 0 auto;
 }
 
-/* For screens smaller than 425px (Mobile) */
-@media (max-width: 425px) {
+/* For screens smaller than 320px (Mobile) */
+@media (min-width: 320px) {
     #header h1 {
         margin-right: 20px;
         font-size: 14px;
@@ -448,7 +446,7 @@ body {
     }
 
     #hero-image img {
-        height: 300px;
+        height: 210px;
     }
 
     #ai-info {
@@ -472,22 +470,37 @@ body {
         margin-right: 0;
     }
 
+    .blockchain {
+        margin-bottom: 10px;
+    }
+
     .blockchain2 {
-        padding-top: 150px;
+        padding-top: 140px;
+        padding-bottom: 120px;
         margin-bottom: 10px;
     }
 
     .blockchain ul li {
         height: 50px;
-        width: 160px;
+        width: 260px;
+        display: contents;
+        font-size: x-small;
     }
 
     .blockchain2 ul li {
         height: 50px;
         width: 177px;
+        display: contents;
+        font-size: x-small;
     }
 
-    .contact-text {
+    .circle {
+        width: 70px;
+        height: 60px;
+        border-radius: 50%;
+    }
+
+    .contact-information::before {
         font-size: 10px;
     }
 
@@ -518,154 +531,124 @@ body {
         margin-bottom: 10px;
     }
 
+    .social-networks {
+        display: flex;
+    }
+
     .footer {
         margin-top: 80px;
         padding-top: 20px;
-        height: 160px;
+        height: 120px;
     }
 
-    #aichatbot {
-        margin-top: 40px;
-        text-align: center;
-    }
 
 }
 
-/* For screens between 768px and 1023px (Tablet) */
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) {
     #header h1 {
-        margin-right: 100px;
+        margin-right: 60px;
+        font-size: 14px;
     }
 
     #header ul li {
-        clear: left;
-        float: left;
-        margin-left: 10px;
-        margin-bottom: 20px;
-        line-height: 25px;
+        margin-right: 10px;
     }
 
     #hero-image img {
-        height: 400px;
-    }
-
-    #ai-info {
-        bottom: 200px;
-        right: 75px;
-    }
-
-    .change h1 {
-        margin-left: 100px;
-    }
-
-    #custom-contact {
-        left: 75px;
-        right: 75px;
-        width: auto;
-        margin-right: 0;
-    }
-
-    .timeline {
-        margin: 120px auto;
-        transform: scale(1.2);
-    }
-
-    #header.grid_12 {
-        font-size: 18px;
-        padding-top: 15px;
-    }
-
-    #nav {
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    #nav li {
-        margin-bottom: 0;
-        margin-right: 15px;
-    }
-
-    #aichatbot {
-        margin-top: 60px;
-        text-align: center;
-    }
-
-    #aichatbot h1#pahsa.i-section {
-        margin-bottom: 20px;
-    }
-
-    #aichatbot .circle {
-        margin-bottom: 40px;
-    }
-
-    #aichatbot .change h1 {
-        margin-left: 100px;
-    }
-
-    #aichatbot #chatbox {
-        margin-top: 40px;
-    }
-}
-
-/* For screens larger than 1023px (Desktop) */
-@media (min-width: 1024px) {
-    #header h1 {
-        margin-right: 250px;
-    }
-
-    #header ul li {
-        margin-right: 20px;
-    }
-
-    #hero-image img {
-        height: 590px;
+        height: 210px;
     }
 
     #ai-info {
         bottom: 300px;
-        right: 100px;
-        font-size: 14px;
+        right: 20px;
+        width: 200px;
+        font-size: 7px;
+        float: inherit;
     }
 
-    .change h1 {
-        margin-left: 290px;
+
+    #ai-info p {
+        bottom: 200px;
+        right: 75px;
     }
 
     #custom-contact {
-        left: 900px;
-        width: 250px;
-        margin-right: 400px;
+        left: 50px;
+        right: 50px;
+        width: auto;
+        margin-right: 0;
+    }
+
+    .blockchain {
+        margin-bottom: 10px;
+    }
+
+    .blockchain2 {
+        padding-top: 140px;
+        padding-bottom: 120px;
+        margin-bottom: 10px;
+    }
+
+    .blockchain ul li {
+        height: 50px;
+        width: 260px;
+        display: contents;
+        font-size: x-small;
+    }
+
+    .blockchain2 ul li {
+        height: 50px;
+        width: 177px;
+        display: contents;
+        font-size: x-small;
+    }
+
+    .circle {
+        width: 70px;
+        height: 60px;
+        border-radius: 50%;
+    }
+
+    .contact-information::before {
+        font-size: 10px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    p {
+        font-size: 8px;
     }
 
     .timeline {
-        margin: 220px auto;
-        transform: scale(1.2);
+        margin: 50px auto;
+        transform: scale(1);
     }
 
     #header.grid_12 {
-        font-size: 12px;
+        font-size: 7px;
+        padding-top: 10px;
+    }
+
+    #nav {
+        flex-direction: inherit;
+        align-items: flex-start;
+    }
+
+    #nav li {
+        margin-bottom: 10px;
+    }
+
+    .social-networks {
+        display: block;
+    }
+
+    .footer {
+        margin-top: 80px;
         padding-top: 20px;
+        height: 120px;
     }
 
-    #aichatbot {
-        margin-top: 10px;
-        text-align: center;
-    }
 
-    #aichatbot h1#pahsa.i-section {
-        margin-bottom: 30px;
-    }
-
-    #aichatbot .circle {
-        margin-bottom: 60px;
-    }
-
-    #aichatbot .change h1 {
-        margin-left: 370px;
-        margin-top: 30px;
-    }
-
-    #aichatbot #chatbox {
-        margin-top: 10px;
-    }
 }
