--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -480,8 +480,8 @@ body {
     #custom-contact {
         left: 50px;
         right: 50px;
-        width: auto;
-        margin-right: 0;
+        width: 250px;
+        margin-left: 30px;
     }
 
     .blockchain {
@@ -518,12 +518,18 @@ body {
         font-size: 10px;
     }
 
+    #signup-btn {
+        color: coral;
+        width: 60px;
+        text-align: center;
+    }
+
     h2 {
         font-size: 20px;
     }
 
     p {
-        font-size: 8px;
+        font-size: 11px;
     }
 
     .timeline {
@@ -587,10 +593,12 @@ body {
     }
 
     #custom-contact {
-        left: 50px;
-        right: 50px;
-        width: auto;
-        margin-right: 0;
+        left: 500px;
+        display: inline-grid;
+        right: 60px;
+        width: 650px;
+        margin-left: 100px;
+        margin-bottom: 100px;
     }
 
     .blockchain {
@@ -633,6 +641,13 @@ body {
 
     p {
         font-size: 8px;
+    }
+
+    #signup-btn {
+        background-color: orange;
+        color: white;
+        width: 100px;
+        margin-left: 220px;
     }
 
     .timeline {
