--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -66,7 +66,6 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #fff;
     z-index: 999;
 }
 
@@ -301,7 +300,6 @@ ul li {
 
 /* Contact Section */
 .contact {
-    display: table-cell;
     justify-content: center;
     box-sizing: border-box;
     align-items: center;
@@ -316,6 +314,7 @@ ul li {
 
 .contact {
     background-image: url("assets/styles/ivana-cajina-asuyh-_ZX54-unsplash.webp");
+    display: table-cell;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -457,14 +456,14 @@ body {
     }
 
     #hero-image img {
-        height: 510px;
+        height: 200px;
     }
 
     #hero-image {
         position: relative;
         margin-top: 0px;
         overflow: hidden;
-        width: 147%;
+        width: 100%;
     }
 
     #ai-info {
@@ -485,6 +484,7 @@ body {
         right: 50px;
         width: 250px;
         margin-left: 30px;
+        margin-bottom: 540px;
     }
 
     #contact-information {
@@ -529,9 +529,7 @@ body {
 
     #signup-btn {
         color: coral;
-        width: 60px;
         text-align: center;
-        margin-left: 50px;
     }
 
     h2 {
@@ -539,7 +537,7 @@ body {
     }
 
     p {
-        font-size: 11px;
+        font-size: 10px;
     }
 
     .timeline {
@@ -547,8 +545,23 @@ body {
         transform: scale(1);
     }
 
+    .timeline-content {
+        width: 0%;
+        margin-left: 0px;
+    }
+
     .quiz-section {
-        margin-left: 60px;
+        margin-left: 10px;
+    }
+
+    form label,
+    form input[type="text"],
+    form input[type="email"],
+    form input[type="tel"],
+    form input[type="submit"] {
+        margin-bottom: 10px;
+        border-radius: 20px;
+        color: orange;
     }
 
     form#signup-section {
@@ -573,9 +586,13 @@ body {
         display: flex;
     }
 
+    .contact {
+        width: 470px;
+    }
+
     .footer {
         margin-top: 80px;
-        width: 470px;
+        width: 320px;
     }
 
 
@@ -585,7 +602,7 @@ body {
 @media (min-width: 768px) {
     #header h1 {
         margin-right: 40px;
-        font-size: 19px;
+        font-size: 17px;
     }
 
     #header ul li {
@@ -610,10 +627,8 @@ body {
     }
 
     #custom-contact {
-        left: 500px;
         display: block;
-        right: 60px;
-        height: 380px;
+        height: 485px;
         margin-left: 100px;
         margin-right: 00px;
     }
@@ -675,8 +690,6 @@ body {
     #signup-btn {
         background-color: orange;
         color: white;
-        width: 100px;
-        margin-left: 30px;
     }
 
     .timeline {
@@ -746,13 +759,10 @@ body {
     }
 
     #custom-contact {
-        left: 500px;
         display: inline-grid;
-        right: 60px;
         width: 650px;
-        height: 460px;
+        height: 471px;
         margin-left: 400px;
-        margin-bottom: 100px;
     }
 
     #signup-btn {
@@ -860,7 +870,7 @@ body {
     }
 
     .footer {
-        width: 1280px;
+        width: 1330px;
     }
 
 }
@@ -876,7 +886,6 @@ body {
     }
 
     .footer {
-        position: sticky;
         width: 1600px;
     }
 
