--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -484,7 +484,7 @@ body {
         right: 50px;
         width: 250px;
         margin-left: 30px;
-        margin-bottom: 540px;
+        margin-bottom: 440px;
     }
 
     #contact-information {
@@ -685,6 +685,17 @@ body {
         font-size: 15px;
     }
 
+    form label,
+    form input[type="text"],
+    form input[type="email"],
+    form input[type="tel"],
+    form input[type="submit"] {
+        width: 100px;
+        margin-bottom: 10px;
+        border-radius: 20px;
+        color: orange;
+    }
+
     form#signup-section {
         display: inline-grid;
     }
@@ -767,6 +778,17 @@ body {
         margin-left: 400px;
     }
 
+    form label,
+    form input[type="text"],
+    form input[type="email"],
+    form input[type="tel"],
+    form input[type="submit"] {
+        width: 100px;
+        margin-bottom: 10px;
+        border-radius: 20px;
+        color: orange;
+    }
+
     #signup-btn {
         background-color: orange;
         color: white;
@@ -778,18 +800,6 @@ body {
         display: grid;
         margin-left: 180px;
     }
-
-    form label,
-    form input[type="text"],
-    form input[type="email"],
-    form input[type="tel"],
-    form input[type="submit"] {
-        width: 180px;
-        color: white;
-        font-size: larger;
-        margin-left: 30px;
-    }
-
 
     .blockchain {
         margin-bottom: 10px;
@@ -831,7 +841,7 @@ body {
     }
 
     .quiz-section {
-        margin-left: 350px;
+        margin-left: 490px;
     }
 
     h2 {
@@ -884,7 +894,7 @@ body {
     }
 
     .quiz-section {
-        margin-left: 570px;
+        margin-left: 650px;
     }
 
     .footer {
