--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -22,7 +22,6 @@
     margin-right: 250px;
     font-family: "Rhodium Libre", sans-serif;
     color: white;
-    text-shadow: 2px 2px 2px coral;
 }
 
 #header ul {
@@ -75,7 +74,6 @@ h1 {
     font-family: "Rhodium Libre", sans-serif;
     text-align: center;
     border-radius: 8px;
-    text-shadow: 2px 2px 2px coral;
     color: white;
 }
 
@@ -99,6 +97,7 @@ a {
 h2 {
     color: white;
     text-align: center;
+    font-family: "Rhodium Libre", sans-serif;
 }
 
 /* List Item Styles */
