--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -106,7 +106,7 @@ li {
 }
 
 i {
-    color: black;
+    color: coral;
 }
 
 /* Hero Image Section */
@@ -166,7 +166,6 @@ i {
 
 .blockchain2 {
     padding: 20px;
-    height: 350px;
     border-radius: 5px;
     text-align: center;
     font-family: "Rhodium Libre", sans-serif;
@@ -245,21 +244,16 @@ ul li {
 
 /* Timeline Section */
 .timeline {
-    margin: 220px auto;
     text-align: center;
-    max-width: 900px;
-    transition: transform 0.3s;
-    transform: scale(1.2);
 }
 
 .timeline-item {
-    display: table-row;
+    display: flex;
+    flex-direction: column;
 }
 
 .timeline-date,
 .timeline-content {
-    display: inline-grid;
-    padding: 20px;
     border: 2px solid black;
     box-shadow: 5px 5px 10px grey;
     border-radius: 20px;
@@ -268,12 +262,7 @@ ul li {
 
 /* Quiz on bitcoin */
 .quiz-section {
-    border: 2px solid black;
     border-radius: 20px;
-    box-shadow: 10px 10px 20px 10px coral;
-    width: 300px;
-    display: block;
-    margin-left: 600px;
     text-align: center;
 }
 
@@ -294,15 +283,10 @@ ul li {
 
 
 #custom-contact {
-    bottom: 400px;
-    left: 900px;
-    width: 350px;
-    margin-bottom: 350PX;
+    margin-bottom: 474PX;
     margin-top: 150px;
     box-shadow: 5px 5px 40px #b42909;
-    background-color: rgba(89, 38, 178, 0.3);
     padding-top: 30px;
-    border: 1px solid black;
     border-radius: 30px;
     text-align: center;
 }
@@ -312,14 +296,15 @@ form label,
 form input[type="text"],
 form input[type="email"],
 form input[type="tel"],
-form input[type="submit"] {
+form input[type="button"] {
     margin-bottom: 10px;
     border-radius: 20px;
-    color: white;
+    color: black;
 }
 
-#signup-btn {
-    color: black;
+input#quiz-submit-btn {
+    border-radius: 5px;
+    width: 50px;
 }
 
 /* Footer Section */
@@ -411,32 +396,11 @@ body {
     }
 
 
-    #ai-info p {
-        bottom: 200px;
-        right: 75px;
-    }
-
     #custom-contact {
-        left: 50px;
-        right: 50px;
-        width: 250px;
-        margin-left: 30px;
-        margin-bottom: 440px;
-    }
-
-    #contact-information {
-        margin-left: 20px;
-        margin-right: 20px;
-        height: 190px;
+        margin-bottom: 474px;
     }
 
     .blockchain {
-        margin-bottom: 10px;
-    }
-
-    .blockchain2 {
-        padding-top: 140px;
-        padding-bottom: 120px;
         margin-bottom: 10px;
     }
 
@@ -465,7 +429,6 @@ body {
     }
 
     #signup-btn {
-        color: coral;
         text-align: center;
     }
 
@@ -474,33 +437,18 @@ body {
     }
 
     p {
-        font-size: 10px;
+        font-size: 9px;
     }
 
-    .timeline {
-        margin: 50px auto;
-        transform: scale(1);
-    }
-
-    .timeline-content {
-        width: 80%;
-        margin-left: 0px;
-    }
-
-    .quiz-section {
-        margin-left: 50px;
-        width: 237px;
-    }
 
     form label,
     form input[type="text"],
     form input[type="email"],
     form input[type="tel"],
-    form input[type="submit"] {
+    form input[type="button"] {
         width: 100px;
         margin-bottom: 10px;
         border-radius: 20px;
-        color: orange;
     }
 
     form#signup-section {
@@ -525,11 +473,6 @@ body {
         display: flex;
     }
 
-    .contact {
-        width: 470px;
-    }
-
-
 }
 
 /* For screens at 768px wide */
@@ -545,18 +488,6 @@ body {
 
     #hero-image img {
         height: 210px;
-    }
-
-    #ai-info p {
-        bottom: 200px;
-        right: 75px;
-    }
-
-    #custom-contact {
-        display: block;
-        height: 485px;
-        margin-left: 100px;
-        margin-right: 00px;
     }
 
     .blockchain2 {
@@ -589,43 +520,23 @@ body {
         font-size: 10px;
     }
 
-
-    .quiz-section {
-        margin-left: 250px;
-    }
-
     h2 {
         font-size: 20px;
     }
 
-    p {
-        font-size: 15px;
-    }
 
     form label,
     form input[type="text"],
     form input[type="email"],
     form input[type="tel"],
-    form input[type="submit"] {
+    form input[type="button"] {
         width: 100px;
         margin-bottom: 10px;
         border-radius: 20px;
-        color: orange;
     }
 
     form#signup-section {
         display: inline-grid;
-    }
-
-    #signup-btn {
-        background-color: orange;
-        color: white;
-    }
-
-    .timeline {
-        margin: 50px auto;
-        transform: scale(1);
-        width: 400px;
     }
 
     #header.grid_12 {
@@ -665,39 +576,24 @@ body {
         height: 440px;
     }
 
-    #ai-info p {
-        bottom: 200px;
-        right: 75px;
-    }
 
     #custom-contact {
-        display: inline-grid;
-        width: 650px;
-        height: 471px;
-        margin-left: 400px;
+        height: 373px;
     }
 
     form label,
     form input[type="text"],
     form input[type="email"],
     form input[type="tel"],
-    form input[type="submit"] {
+    form input[type="button"] {
         width: 180px;
         margin-bottom: 10px;
         border-radius: 20px;
-        color: orange;
     }
 
-    #signup-btn {
-        background-color: orange;
-        color: white;
-        width: 180px;
-    }
 
     #signup-section {
-        padding: 30px;
         display: grid;
-        margin-left: 180px;
     }
 
     .blockchain2 {
@@ -730,24 +626,12 @@ body {
         font-size: 10px;
     }
 
-    .quiz-section {
-        margin-left: 490px;
-    }
 
     h2 {
         font-size: 25px;
         letter-spacing: 3px;
     }
 
-    p {
-        font-size: 16px;
-        letter-spacing: 1px;
-    }
-
-    .timeline {
-        margin: 50px auto;
-        transform: scale(1);
-    }
 
     #header.grid_12 {
         font-size: 15px;
@@ -768,15 +652,7 @@ body {
 /* For screen sizes up too 1600px */
 @media (min-width: 1600px) {
 
-    .quiz-section {
-        margin-left: 650px;
-    }
-
     div#header {
         width: 100%;
-    }
-
-    .timeline {
-        width: 1000px;
     }
 }
